Updated design to glassmorphic layout

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,10 +13,11 @@
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <div class="container">
     <div class="glass-card">
       <h2>About Me</h2>
-      <p>I’m a passionate developer who loves creating elegant solutions to real-world problems. I enjoy working with JavaScript frameworks, exploring UI/UX, and learning new technologies.</p>
+      <p>I’m a passionate developer who enjoys building user-friendly applications. My focus is on front-end development, but I’m always eager to learn full-stack concepts.</p>
     </div>
   </div>
 </body>
