--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Projects</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,16 +13,17 @@
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <div class="container">
     <div class="glass-card">
       <h2>SkillSpark</h2>
-      <p>A React Native app for learning paths and course aggregation from Coursera, edX, and Udemy.</p>
+      <p>A React Native app that aggregates courses from Coursera, edX, and Udemy with a personalized learning roadmap.</p>
       <a href="https://github.com/yourusername/skillspark" target="_blank">View on GitHub</a>
     </div>
 
     <div class="glass-card">
       <h2>MyLearningApp</h2>
-      <p>A mobile app for personalized learning recommendations based on interest quiz.</p>
+      <p>An app with interest quiz, learning preferences, and course suggestions. Built with React Native + AWS Amplify.</p>
     </div>
   </div>
 </body>
