--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,12 +13,13 @@
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <div class="container">
     <div class="glass-card">
       <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:supriyahegde71@gmail.com">supriyahegde71@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/SupriyaHegde773" target="_blank">github.com/SupriyaHegde773</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/supriya-hegde07" target="_blank">linkedin.com/in/supriya-hegde07</a></p>
+      <p>Email: <a href="mailto:supriya@example.com">supriya@example.com</a></p>
+      <p>GitHub: <a href="https://github.com/supriyahegde773" target="_blank">github.com/supriyahegde773</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/supriyahegde" target="_blank">linkedin.com/in/supriyahegde</a></p>
     </div>
   </div>
 </body>
