--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,10 +13,12 @@
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <div class="container">
     <div class="glass-card">
       <h2>My Resume</h2>
       <embed src="assets/resume.pdf" type="application/pdf" width="100%" height="600px" />
+      <p><a href="assets/resume.pdf" download>Download Resume</a></p>
     </div>
   </div>
 </body>
