--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,8 @@
   <div class="container">
     <div class="glass-card">
       <h2>My Resume</h2>
-      <embed src="assets/resume.pdf" type="application/pdf" width="100%" height="600px" />
-      <p><a href="assets/resume.pdf" download>Download Resume</a></p>
+      <embed src="assets/Supriya.Resume.pdf" type="application/pdf" width="100%" height="600px" />
+      <p><a href="assets/Supriya.Resume.pdf" download>Download Resume</a></p>
     </div>
   </div>
 </body>
