Fix bgclr and contact

--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,17 @@
 
   <div class="container">
     <div class="glass-card">
-      <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:supriya@example.com">supriya@example.com</a></p>
-      <p>GitHub: <a href="https://github.com/supriyahegde773" target="_blank">github.com/supriyahegde773</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/supriyahegde" target="_blank">linkedin.com/in/supriyahegde</a></p>
+  <h2>Contact Me</h2>
+  <div class="social-icons">
+    <a href="https://linkedin.com/in/supriyahegde" target="_blank" aria-label="LinkedIn">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
+    </a>
+    <a href="https://github.com/supriyahegde773" target="_blank" aria-label="GitHub">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+    </a>
+    <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
+      <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail" />
+    </a>
     </div>
   </div>
 </body>
