changed clr and layout

--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,16 @@
     <div class="glass-card">
   <h2>Contact Me</h2>
   <div class="social-icons">
+    <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
+      <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
+    </a>
     <a href="https://linkedin.com/in/supriyahegde" target="_blank" aria-label="LinkedIn">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
     </a>
     <a href="https://github.com/supriyahegde773" target="_blank" aria-label="GitHub">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
     </a>
-    <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
-      <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail" />
-    </a>
-    </div>
   </div>
+</div>
 </body>
 </html>
