--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>
 <body>
   <nav>
     <a href="index.html">Home</a>
@@ -15,13 +18,13 @@
   </nav>
 
   <div class="container">
-    <div class="glass-card">
+    <div class="glass-card" data-aos="fade-up">
   <h2>Contact Me</h2>
   <div class="social-icons">
     <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
       <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
     </a>
-    <a href="https://linkedin.com/in/supriyahegde" target="_blank" aria-label="LinkedIn">
+    <a href="www.linkedin.com/in/supriya-hegde07" target="_blank" aria-label="LinkedIn">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
     </a>
     <a href="https://github.com/supriyahegde773" target="_blank" aria-label="GitHub">
