--- a/about.html
+++ b/about.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>
 <body>
   <nav>
     <a href="index.html">Home</a>
@@ -15,7 +18,7 @@
   </nav>
 
   <div class="container">
-    <div class="glass-card">
+    <div class="glass-card" data-aos="fade-up">
       <h2>About Me</h2>
       <p>I’m a passionate developer who enjoys building user-friendly applications. My focus is on front-end development, but I’m always eager to learn full-stack concepts.</p>
     </div>
