--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,6 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script>
 <body>
   <nav>
     <a href="index.html">Home</a>
@@ -19,18 +17,22 @@
 
   <div class="container">
     <div class="glass-card" data-aos="fade-up">
-  <h2>Contact Me</h2>
-  <div class="social-icons">
-    <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
-      <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
-    </a>
-    <a href="www.linkedin.com/in/supriya-hegde07" target="_blank" aria-label="LinkedIn">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
-    </a>
-    <a href="https://github.com/supriyahegde773" target="_blank" aria-label="GitHub">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
-    </a>
+      <h2>Contact Me</h2>
+      <div class="social-icons">
+        <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
+          <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
+        </a>
+        <a href="https://www.linkedin.com/in/supriya-hegde07" target="_blank" aria-label="LinkedIn">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+        </a>
+        <a href="https://github.com/supriyahegde773" target="_blank" aria-label="GitHub">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+        </a>
+      </div>
+    </div>
   </div>
-</div>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
