--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
   <title>Supriya | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <style>
+    .expandable-card {
+      overflow: hidden;
+      height: 60px;
+      transition: height 0.4s ease;
+      cursor: pointer;
+    }
+
+    .expandable-card:hover {
+      height: auto;
+    }
+
+    .expandable-card h2 {
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script>
 <body>
   <nav>
     <a href="index.html">Home</a>
@@ -21,17 +35,17 @@
     <h1>Hello, I'm Supriya 👋</h1>
     <p>Welcome to my personal portfolio website.</p>
 
-    <div class="glass-card" data-aos="fade-up">
+    <div class="glass-card expandable-card" data-aos="fade-up">
       <h2>Experience</h2>
       <p>Junior Developer at XYZ Corp (2023–Present)</p>
     </div>
 
-    <div class="glass-card" data-aos="fade-up">
+    <div class="glass-card expandable-card" data-aos="fade-up">
       <h2>Education</h2>
       <p>Bachelor of Technology in Computer Science</p>
     </div>
 
-    <div class="glass-card" data-aos="fade-up">
+    <div class="glass-card expandable-card" data-aos="fade-up">
       <h2>Skills</h2>
       <ul>
         <li>React, JavaScript, HTML, CSS</li>
@@ -40,5 +54,8 @@
       </ul>
     </div>
   </div>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
