--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
       gap: 1rem;
       margin-bottom: 1.5rem;
     }
+
     .tab-buttons button {
       padding: 0.5rem 1rem;
       border: none;
@@ -21,27 +22,45 @@
       border-radius: 8px;
       transition: 0.3s ease;
     }
+
     .tab-buttons button.active {
       background-color: #00ffe7;
       color: #000;
     }
+
     .tab-content {
       display: none;
     }
+
     .tab-content.active {
       display: block;
     }
+
     .project-image {
       max-width: 100%;
+      height: 130px;
+      object-fit: cover;
       border-radius: 10px;
       margin-bottom: 1rem;
+    }
+
+    .project-card {
+      min-height: 340px;
+      max-height: 360px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    @media screen and (max-width: 600px) {
+      .project-card {
+        min-height: auto;
+        max-height: none;
+      }
     }
   </style>
 </head>
 <body>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -59,40 +78,43 @@
     </div>
 
     <div id="academic" class="tab-content active">
-      <div class="glass-card" data-aos="fade-up">
+      <div class="glass-card project-card" data-aos="fade-up">
         <img src="assets/biometric.jpeg" alt="Biometric Watermarking" class="project-image">
         <h2>Biometric Watermarking using Deep Learning</h2>
-        <p>Developed a biometric watermarking system embedding fingerprint data into iris images for secure, keyless authentication. Implemented DWT, DCT, and SVD techniques to ensure robust watermarks resistant to attacks. Designed for use in digital IDs, medical records, and copyright protection.</p>
+        <p>Embedded fingerprint data into iris images using DWT, DCT, and SVD for secure, attack-resistant watermarking in digital ID, medical records, and copyright protection.</p>
       </div>
 
-      <div class="glass-card" data-aos="fade-up">
+      <div class="glass-card project-card" data-aos="fade-up">
         <img src="assets/social media analytics.jpg" alt="Social Media Analytics" class="project-image">
         <h2>Real-Time Social Media Analytics Pipeline</h2>
-        <p>Developed a real-time data processing framework for social media analytics. Implemented sentiment analysis, text clustering, and topic modeling. Deployed the trained model using Flask API and optimized performance using Grid Search and Cross-Validation.</p>
+        <p>Built a pipeline for real-time social sentiment analysis and topic modeling. Optimized using Grid Search & Flask API for deployment.</p>
       </div>
 
-      <div class="glass-card" data-aos="fade-up">
+      <div class="glass-card project-card" data-aos="fade-up">
         <img src="assets/brain tumor.png" alt="Brain Tumor Detection" class="project-image">
-        <h2>Brain Tumor Detection using Machine Learning</h2>
-        <p>Developed a CNN-based model to classify brain tumors from MRI scans. Used OpenCV for image preprocessing and PyQt5 for creating an interactive GUI to load images and generate predictions.</p>
+        <h2>Brain Tumor Detection using ML</h2>
+        <p>Developed a model with OpenCV preprocessing to detect tumors from MRI scans. GUI built with PyQt5 for interactive prediction.</p>
       </div>
 
-      <div class="glass-card" data-aos="fade-up">
-        <img src="assets/Movie booking.jpg" alt="Movie Ticket Booking System" class="project-image">
+      <div class="glass-card project-card" data-aos="fade-up">
+        <img src="assets/Movie booking.jpg" alt="Movie Booking System" class="project-image">
         <h2>Movie Ticket Booking System</h2>
-        <p>Built a Django + MySQL based movie ticket booking system. Included CRUD operations and user authentication. Designed for managing bookings and movie schedules efficiently.</p>
+        <p>Created a MySQL system with full CRUD, user login, and movie schedule management for streamlined ticket booking.</p>
       </div>
     </div>
 
     <div id="personal" class="tab-content">
-      <div class="glass-card" data-aos="fade-up">
+      <div class="glass-card project-card" data-aos="fade-up">
         <h2>Coming Soon!</h2>
         <p>Your personal projects will be added here later.</p>
       </div>
     </div>
   </div>
 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+    AOS.init();
+
     function showTab(tab) {
       document.querySelectorAll('.tab-content').forEach(el => el.classList.remove('active'));
       document.querySelector(`#${tab}`).classList.add('active');
