--- a/projects.html
+++ b/projects.html
@@ -113,19 +113,19 @@
       </div>
 
       <div class="project-card" data-aos="fade-up">
-        <img src="assets/social_media_analytics.jpg" alt="Social Media Analytics" class="project-image">
+        <img src="assets/social media analytics.jpg" alt="Social Media Analytics" class="project-image">
         <h2>Real-Time Social Media Analytics Pipeline</h2>
         <p>Built a pipeline for real-time social sentiment analysis and topic modeling. Optimized using Grid Search & Flask API for deployment.</p>
       </div>
 
       <div class="project-card" data-aos="fade-up">
-        <img src="assets/brain_tumor.png" alt="Brain Tumor Detection" class="project-image">
+        <img src="assets/brain tumor.png" alt="Brain Tumor Detection" class="project-image">
         <h2>Brain Tumor Detection using ML</h2>
         <p>Developed a CNN with OpenCV preprocessing to detect tumors from MRI scans. GUI built with PyQt5 for interactive prediction.</p>
       </div>
 
       <div class="project-card" data-aos="fade-up">
-        <img src="assets/movie_booking.jpg" alt="Movie Booking System" class="project-image">
+        <img src="assets/Movie booking.jpg" alt="Movie Booking System" class="project-image">
         <h2>Movie Ticket Booking System</h2>
         <p>Created a Django + MySQL system with full CRUD, user login, and movie schedule management for streamlined ticket booking.</p>
       </div>
