updated all layouts

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <nav>
@@ -16,7 +15,7 @@
   </nav>
 
   <div class="container">
-    <div class="glass-card" data-aos="fade-up">
+    <div class="glass-card">
       <h2>Contact Me</h2>
       <div class="social-icons">
         <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
@@ -31,8 +30,5 @@
       </div>
     </div>
   </div>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
 </body>
 </html>
