--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Supriya | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .expandable-card {
       overflow: hidden;
@@ -15,10 +14,6 @@
 
     .expandable-card:hover {
       height: auto;
-    }
-
-    .expandable-card h2 {
-      margin-bottom: 0.5rem;
     }
   </style>
 </head>
@@ -35,17 +30,17 @@
     <h1>Hello, I'm Supriya 👋</h1>
     <p>Welcome to my personal portfolio website.</p>
 
-    <div class="glass-card expandable-card" data-aos="fade-up">
+    <div class="glass-card expandable-card">
       <h2>Experience</h2>
       <p>Junior Developer at XYZ Corp (2023–Present)</p>
     </div>
 
-    <div class="glass-card expandable-card" data-aos="fade-up">
+    <div class="glass-card expandable-card">
       <h2>Education</h2>
       <p>Bachelor of Technology in Computer Science</p>
     </div>
 
-    <div class="glass-card expandable-card" data-aos="fade-up">
+    <div class="glass-card expandable-card">
       <h2>Skills</h2>
       <ul>
         <li>React, JavaScript, HTML, CSS</li>
@@ -54,8 +49,5 @@
       </ul>
     </div>
   </div>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
 </body>
 </html>
