--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Projects</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .tab-buttons {
       display: flex;
@@ -33,38 +32,47 @@
 
     .tab-content {
       display: none;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
     }
 
     .tab-content.active {
       display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
     }
 
     .project-card {
       background: rgba(255, 255, 255, 0.06);
-      border-radius: 16px;
-      padding: 1.5rem;
+      border-radius: 18px;
+      padding: 2rem;
       backdrop-filter: blur(20px);
       border: 1px solid rgba(255, 255, 255, 0.15);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      text-align: center;
+      box-shadow: 0 6px 28px rgba(0, 0, 0, 0.3);
       width: 100%;
       max-width: 680px;
-      margin: 0 auto;
+      min-height: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+      transition: transform 0.3s ease;
     }
 
     .project-card:hover {
       transform: translateY(-4px);
     }
 
+    .project-card img {
+      width: 100%;
+      max-height: 150px;
+      object-fit: cover;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+    }
+
     .project-card h2 {
-      margin: 1rem 0 0.5rem;
+      margin: 0.8rem 0 0.5rem;
       font-size: 1.3rem;
       color: #fff;
     }
@@ -74,16 +82,9 @@
       font-size: 0.95rem;
     }
 
-    .project-image {
-      width: 100%;
-      max-height: 150px;
-      object-fit: cover;
-      border-radius: 12px;
-    }
-
     @media screen and (max-width: 600px) {
       .project-card {
-        padding: 1rem;
+        padding: 1.2rem;
       }
     }
   </style>
@@ -98,7 +99,7 @@
   </nav>
 
   <div class="container">
-    <h1 data-aos="fade-down" style="text-align: center; margin-bottom: 1rem;">Projects</h1>
+    <h1 style="text-align: center; margin-bottom: 1rem;">Projects</h1>
 
     <div class="tab-buttons">
       <button onclick="showTab('academic')" id="academicTab" class="active">Academic Projects</button>
@@ -106,43 +107,40 @@
     </div>
 
     <div id="academic" class="tab-content active">
-      <div class="project-card" data-aos="fade-up">
-        <img src="assets/biometric.jpeg" alt="Biometric Watermarking" class="project-image">
+      <div class="project-card">
+        <img src="assets/biometric.jpeg" alt="Biometric Watermarking">
         <h2>Biometric Watermarking using Deep Learning</h2>
         <p>Embedded fingerprint data into iris images using DWT, DCT, and SVD for secure, attack-resistant watermarking in digital ID, medical records, and copyright protection.</p>
       </div>
 
-      <div class="project-card" data-aos="fade-up">
-        <img src="assets/social media analytics.jpg" alt="Social Media Analytics" class="project-image">
+      <div class="project-card">
+        <img src="assets/social media analytics.jpg" alt="Social Media Analytics">
         <h2>Real-Time Social Media Analytics Pipeline</h2>
         <p>Built a pipeline for real-time social sentiment analysis and topic modeling. Optimized using Grid Search & Flask API for deployment.</p>
       </div>
 
-      <div class="project-card" data-aos="fade-up">
-        <img src="assets/brain tumor.png" alt="Brain Tumor Detection" class="project-image">
+      <div class="project-card">
+        <img src="assets/brain tumor.png" alt="Brain Tumor Detection">
         <h2>Brain Tumor Detection using ML</h2>
         <p>Developed a CNN with OpenCV preprocessing to detect tumors from MRI scans. GUI built with PyQt5 for interactive prediction.</p>
       </div>
 
-      <div class="project-card" data-aos="fade-up">
-        <img src="assets/Movie booking.jpg" alt="Movie Booking System" class="project-image">
+      <div class="project-card">
+        <img src="assets/Movie booking.jpg" alt="Movie Booking System">
         <h2>Movie Ticket Booking System</h2>
         <p>Created a Django + MySQL system with full CRUD, user login, and movie schedule management for streamlined ticket booking.</p>
       </div>
     </div>
 
     <div id="personal" class="tab-content">
-      <div class="project-card" data-aos="fade-up">
+      <div class="project-card">
         <h2>Coming Soon!</h2>
         <p>Your personal projects will be added here later.</p>
       </div>
     </div>
   </div>
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    AOS.init();
-
     function showTab(tab) {
       document.querySelectorAll('.tab-content').forEach(el => el.classList.remove('active'));
       document.querySelector(`#${tab}`).classList.add('active');
