--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Resume</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <nav>
@@ -16,14 +15,11 @@
   </nav>
 
   <div class="container">
-    <div class="glass-card" data-aos="fade-up">
+    <div class="glass-card">
       <h2>My Resume</h2>
       <embed src="assets/Supriya.Resume.pdf" type="application/pdf" width="100%" height="600px" />
       <p><a href="assets/Supriya.Resume.pdf" download>Download Resume</a></p>
     </div>
   </div>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
 </body>
 </html>
