--- a/index.html
+++ b/index.html
@@ -32,20 +32,26 @@
 
     <div class="glass-card expandable-card">
       <h2>Experience</h2>
-      <p>Junior Developer at XYZ Corp (2023–Present)</p>
+      <p>Web Developed Intern at Metricdust LLC (Apr/2025-Jul/2025)</p>
+      <p>Apr/2025-Jul/2025</p>
     </div>
 
     <div class="glass-card expandable-card">
       <h2>Education</h2>
-      <p>Bachelor of Technology in Computer Science</p>
+      <p>Bachelor of Engineering in Computer Science</p>
+      <p>GPA-3.6</p>
     </div>
 
     <div class="glass-card expandable-card">
       <h2>Skills</h2>
       <ul>
-        <li>React, JavaScript, HTML, CSS</li>
-        <li>Python, SQL</li>
-        <li>Version Control (Git)</li>
+        <li>Programming languages:Python, Java</li>
+        <li>Web development:ReactJS,HTML,Django,AngularJS</li>
+        <li>Version Control:Git</li>
+        <li>Machine Learning:Scikit-learn, TensorFlow, MATLAB, Pandas, NumPy</li>
+        <li>Image preprocessing:OpenCV</li>
+        <li>Database management:MySQL</li>
+        <li>Tools & Platforms:VSCode, GitHub, PyQt5, Canva</li>
       </ul>
     </div>
   </div>
