--- a/projects.html
+++ b/projects.html
@@ -100,13 +100,13 @@
       <div class="glass-card">
         <img src="assets/brain tumor.png" alt="Brain Tumor Detection" class="project-image">
         <h2>Brain Tumor Detection using ML</h2>
-        <p>Developed a CNN with OpenCV preprocessing to detect tumors from MRI scans. GUI built with PyQt5 for interactive prediction.</p>
+        <p>Developed a model with OpenCV preprocessing to detect tumors from MRI scans. GUI built with PyQt5 for interactive prediction.</p>
       </div>
 
       <div class="glass-card">
         <img src="assets/Movie booking.jpg" alt="Movie Booking System" class="project-image">
         <h2>Movie Ticket Booking System</h2>
-        <p>Created a Django + MySQL system with full CRUD, user login, and movie schedule management for streamlined ticket booking.</p>
+        <p>Created a MySQL system with full CRUD, user login, and movie schedule management for streamlined ticket booking.</p>
       </div>
     </div>
 
