personal prj added

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -17,7 +17,15 @@
   <div class="container">
     <div class="glass-card">
       <h2>About Me</h2>
-      <p>I’m a passionate developer who enjoys building user-friendly applications. My focus is on front-end development, but I’m always eager to learn full-stack concepts.</p>
+      <p>
+        I’m a passionate and dedicated software developer with a strong interest in building clean, user-friendly applications. While my primary focus is front-end development, I’m also enthusiastic about full-stack concepts and continuously strive to broaden my skillset.
+      </p>
+      <p>
+        I’m always curious and eager to explore new technologies, frameworks, and development trends. I value teamwork and collaboration, and I enjoy contributing in a team environment where ideas are shared and challenges are solved together.
+      </p>
+      <p>
+        Outside of tech, I’m actively involved in athletics and hold certifications that reflect my commitment to discipline, fitness, and personal growth. This mindset carries over into my work—driven, focused, and ready to take on challenges.
+      </p>
     </div>
   </div>
 </body>
