--- a/projects.html
+++ b/projects.html
@@ -110,13 +110,19 @@
       </div>
     </div>
 
-    <div id="personal" class="tab-content">
-      <div class="glass-card">
-        <h2>Coming Soon!</h2>
-        <p>Your personal projects will be added here later.</p>
-      </div>
-    </div>
+<div id="personal" class="tab-content">
+  <div class="glass-card">
+    <img src="assets/food-label.jpg" alt="Food Label Design" class="project-image">
+    <h2>Label Design for Local Food Business</h2>
+    <p>Created eye-catching and informative packaging labels using Canva for a small food business, focusing on brand identity and clarity.</p>
   </div>
+
+  <div class="glass-card">
+    <img src="assets/invitations.jpg" alt="Event Invitation Design" class="project-image">
+    <h2>Hostel Event Invitations</h2>
+    <p>Designed digital and print invitations for college hostel events, enhancing event engagement through aesthetic layouts and creative visuals.</p>
+  </div>
+</div>
 
   <script>
     function showTab(tab) {
