--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #d3cce3, #e9e4f0);
+      margin: 0;
+      padding: 30px;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin-bottom: 40px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #6a11cb;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .glass-card {
+      background: rgba(255, 255, 255, 0.25);
+      border-radius: 16px;
+      padding: 25px 30px 20px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+    }
+
+    .glass-card h2 {
+      font-size: 1.8rem;
+      margin-bottom: 10px; /* Reduced spacing */
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      margin-top: 10px; /* Reduced from large default */
+    }
+
+    .social-icons img {
+      width: 40px;
+      height: 40px;
+      transition: transform 0.2s ease;
+    }
+
+    .social-icons a:hover img {
+      transform: scale(1.15);
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -18,7 +85,7 @@
     <div class="glass-card">
       <h2>Contact Me</h2>
       <div class="social-icons">
-        <a href="mailto:supriya@example.com" target="_blank" aria-label="Gmail">
+        <a href="mailto:supriyahegde71@gmail.com" target="_blank" aria-label="Gmail">
           <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
         </a>
         <a href="https://www.linkedin.com/in/supriya-hegde07" target="_blank" aria-label="LinkedIn">
