--- a/projects.html
+++ b/projects.html
@@ -110,19 +110,38 @@
       </div>
     </div>
 
-<div id="personal" class="tab-content">
-  <div class="glass-card">
-    <img src="assets/food-label.jpg" alt="Food Label Design" class="project-image">
-    <h2>Label Design for Local Food Business</h2>
-    <p>Created eye-catching and informative packaging labels using Canva for a small food business, focusing on brand identity and clarity.</p>
-  </div>
+    <div id="personal" class="tab-content">
+      <div class="glass-card">
+        <img src="assets/food-label.jpg" alt="Food Label Design" class="project-image">
+        <h2>Label Design for Local Food Business</h2>
+        <p>Created eye-catching and informative packaging labels using Canva for a small food business, focusing on brand identity and clarity.</p>
+      </div>
 
-  <div class="glass-card">
-    <img src="assets/invitations.jpg" alt="Event Invitation Design" class="project-image">
-    <h2>Hostel Event Invitations</h2>
-    <p>Designed digital and print invitations for college hostel events, enhancing event engagement through aesthetic layouts and creative visuals.</p>
+      <div class="glass-card">
+        <img src="assets/invitations.jpg" alt="Event Invitation Design" class="project-image">
+        <h2>Hostel Event Invitations</h2>
+        <p>Designed digital and print invitations for college hostel events, enhancing event engagement through aesthetic layouts and creative visuals.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/typing-game.jpg" alt="Typing Game" class="project-image">
+        <h2>Typing Speed Game</h2>
+        <p>A web-based typing game to improve typing accuracy and speed. Built using HTML with real-time feedback</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/memory-game.jpg" alt="Memory Game" class="project-image">
+        <h2>Memory Tile Matching Game</h2>
+        <p>Interactive memory game built using HTML and CSS animations where players match pairs of tiles. Great for brain training!</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/flappy-ginger.jpg" alt="Flappy Ginger Game" class="project-image">
+        <h2>Flappy Gingerbread Game</h2>
+        <p>Inspired by Flappy Bird, but with a gingerbread escaping the milk obstacles.</p>
+      </div>
+    </div>
   </div>
-</div>
 
   <script>
     function showTab(tab) {
