--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     body {
-      background: linear-gradient(to right, #d3cce3, #e9e4f0);
+      background: linear-gradient(135deg, #2b2e4a, #4b3869);
       color: #333;
       padding: 30px;
     }
