--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #d3cce3, #e9e4f0);
+      background: linear-gradient(135deg, #2b2e4a, #4b3869);
       margin: 0;
       padding: 30px;
     }
