--- a/contact.html
+++ b/contact.html
@@ -4,73 +4,6 @@
   <meta charset="UTF-8" />
   <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #2b2e4a, #4b3869);
-      margin: 0;
-      padding: 30px;
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 40px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #6a11cb;
-    }
-
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .glass-card {
-      background: rgba(255, 255, 255, 0.25);
-      border-radius: 16px;
-      padding: 25px 30px 20px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      max-width: 400px;
-      width: 100%;
-      text-align: center;
-    }
-
-    .glass-card h2 {
-      font-size: 1.8rem;
-      margin-bottom: 10px; /* Reduced spacing */
-    }
-
-    .social-icons {
-      display: flex;
-      justify-content: center;
-      gap: 25px;
-      margin-top: 10px; /* Reduced from large default */
-    }
-
-    .social-icons img {
-      width: 40px;
-      height: 40px;
-      transition: transform 0.2s ease;
-    }
-
-    .social-icons a:hover img {
-      transform: scale(1.15);
-    }
-  </style>
 </head>
 <body>
   <nav>
@@ -85,15 +18,9 @@
     <div class="glass-card">
       <h2>Contact Me</h2>
       <div class="social-icons">
-        <a href="mailto:supriyahegde71@gmail.com" target="_blank" aria-label="Gmail">
-          <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
-        </a>
-        <a href="https://www.linkedin.com/in/supriya-hegde07" target="_blank" aria-label="LinkedIn">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
-        </a>
-        <a href="https://github.com/supriyahegde773" target="_blank" aria-label="GitHub">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
-        </a>
+        <a href="mailto:supriyahegde71@gmail.com" target="_blank"><img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail"></a>
+        <a href="https://www.linkedin.com/in/supriya-hegde07" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn"></a>
+        <a href="https://github.com/supriyahegde773" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"></a>
       </div>
     </div>
   </div>
