--- a/projects.html
+++ b/projects.html
@@ -86,31 +86,31 @@
 
     <div id="personal" class="tab-content">
       <div class="glass-card">
-        <img src="assets/food-label.jpg" class="project-image" alt="Food Label" />
+        <img src="assets/food label.pdf" class="project-image" alt="Food Label" />
         <h2>Label Design for Food Business</h2>
         <p>Designed branding and clear food packaging labels using Canva for a local business.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/invitations.jpg" class="project-image" alt="Invitations" />
+        <img src="assets/hd invite.png" class="project-image" alt="Invitations" />
         <h2>Hostel Event Invitations</h2>
         <p>Designed digital and print invitations for college hostel events using Canva and Adobe tools.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/typing-game.jpg" class="project-image" alt="Typing Game" />
+        <img src="assets/Typing.png" class="project-image" alt="Typing Game" />
         <h2>Typing Speed Game</h2>
         <p>Fun browser game built in HTML/CSS/JS to help improve typing accuracy and speed in real-time.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/memory-game.jpg" class="project-image" alt="Memory Game" />
+        <img src="assets/Tiles.png" class="project-image" alt="Memory Game" />
         <h2>Memory Matching Game</h2>
         <p>Flip-card matching game to test and train memory. Built using JavaScript logic and CSS animations.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/flappy-ginger.jpg" class="project-image" alt="Flappy Gingerbread" />
+        <img src="assets/ginger&milk.png" class="project-image" alt="Flappy Gingerbread" />
         <h2>Flappy Gingerbread Game</h2>
         <p>Inspired by Flappy Bird — dodge milk bottles with a flying gingerbread. Created using JS canvas.</p>
       </div>
